up v0.0.31 on 27 may 2024

--- a/Riskvalve/Views/Assessment/PrintAssessment.cshtml
+++ b/Riskvalve/Views/Assessment/PrintAssessment.cshtml
@@ -84,7 +84,7 @@
                 <td colspan="5">Pneumatic</td>
                 <td colspan="1" class="checkbox">
                     <input type="checkbox" />
-                    ----
+                    
                 </td>
             </tr>
             <tr>
@@ -92,12 +92,12 @@
                 <td colspan="2">@assessment.Asset.BodyMaterial</td>
                 <td colspan="5">Hydraulic</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             <tr>
                 <td colspan="4">Remaining Life</td>
-                <td colspan="2">-------</td>
+                <td colspan="2"></td>
                 <td colspan="5">Manual Override</td>
                 <td colspan="1" class="checkbox">
                     <input type="checkbox" @(assessment.Asset.ManualOverrideID == 1 ? "checked" : "")/>
@@ -112,7 +112,7 @@
                 <td colspan="6" class="table-section">Valve Inspection History</td>
                 <td colspan="5">Manual valve</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             <!-- Inspection rows -->
@@ -126,7 +126,7 @@
                 <td class="table-section no-transform" colspan="2">Inspection Image</td>
                 <td colspan="5">Auto On-Off Valve</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             <!-- first inspection/ inspection [0] -->
@@ -145,7 +145,7 @@
                 </td>
                 <td colspan="5">Control Valve</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             } else {
@@ -158,14 +158,14 @@
                     <td rowspan="4" colspan="2"></td>
                     <td colspan="5">Control Valve</td>
                     <td colspan="1" class="checkbox">
-                        <input type="checkbox" /> ---
+                        <input type="checkbox" /> 
                     </td>
                 </tr>
             }
             <tr>
                 <td colspan="5">PSV/PRV</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             <tr>
@@ -174,7 +174,7 @@
             <tr>
                 <td colspan="5">In-service</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             <!-- second inspection -->
@@ -191,7 +191,7 @@
                 }</td>
                 <td colspan="5">Waiting For Refurbishment</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             } else {
@@ -204,14 +204,14 @@
                 <td rowspan="2" colspan="2"></td>
                 <td colspan="5">Waiting For Refurbishment</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             } 
             <tr>
                 <td colspan="5">Spare</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             <!-- loop additional Inspection here -->
