--- a/Riskvalve/Views/AssetRegister/Asset.cshtml
+++ b/Riskvalve/Views/AssetRegister/Asset.cshtml
@@ -87,6 +87,8 @@
 
 @section Scripts {
     <script>
-        initDatatable()
+        initDatatable({
+            ordering: true,
+        })
     </script>
 }
