--- a/Riskvalve/Views/Inspection/Index.cshtml
+++ b/Riskvalve/Views/Inspection/Index.cshtml
@@ -341,21 +341,21 @@
         @* console.log(equipmentId) *@
         @* console.log($('ul[equipment-id=' + equipmentId + ']')) *@
                                     $('ul[equipment-id="' + equipmentId + '"]').append(`
-                                                    <li class="treeview">
-                                                        <a class="btn-add-new-inspection" history-button="" 
-                                                        attr-id="${res.Asset.Id}" attr-inspection-id="${res.Id}" 
-                                                        attr-name="${res.Asset.TagNo} ${res.InspectionDate}" 
-                                                        attr-sidebar-level="4" 
-                                                        attr-find-inspection="${res.Asset.BusinessArea}" 
-                                                        attr-find-platform="${res.Asset.Platform}" 
-                                                        attr-find-equipment="${res.Asset.TagNo}" 
-                                                        attr-find-imr="NEW"
-                                                        onclick="addTab.apply(this)"
-                                                        >
-                                                            ${res.InspectionDate}
-                                                        </a>
-                                                    </li>
-                                                `)
+                                                        <li class="treeview">
+                                                            <a class="btn-add-new-inspection" history-button="" 
+                                                            attr-id="${res.Asset.Id}" attr-inspection-id="${res.Id}" 
+                                                            attr-name="${res.Asset.TagNo} ${res.InspectionDate}" 
+                                                            attr-sidebar-level="4" 
+                                                            attr-find-inspection="${res.Asset.BusinessArea}" 
+                                                            attr-find-platform="${res.Asset.Platform}" 
+                                                            attr-find-equipment="${res.Asset.TagNo}" 
+                                                            attr-find-imr="NEW"
+                                                            onclick="addTab.apply(this)"
+                                                            >
+                                                                ${res.InspectionDate}
+                                                            </a>
+                                                        </li>
+                                                    `)
                                 form.find('.preview-image-gallery .single-image').remove()
                                 form.find('.preview-image-gallery input[type=file]').remove()
                                 fetchHistoryData({
@@ -364,7 +364,7 @@
                                 })
                             }
         @* alert('Data successfully inserted') *@
-                                        },
+                                            },
                         error: function (xhr, status, error) {
                             // Handle error
                             alert('error submitting the form')
@@ -401,7 +401,26 @@
             }
         }
 
-        function printForm(el){
+        function deleteFromTab(id, name) {
+            if (confirm('Are you sure you want to delete ' + name + '?')) {
+                $.ajax({
+                    url: '@urldeleteinspection',
+                    type: 'POST', // or 'GET' depending on your form method
+                    data: {
+                        Id: id
+                    },
+                    success: function (response) {
+                        alert('Data successfully deleted')
+                        $('.btn-add-new-inspection[attr-inspection-id=' + id + ']').closest('li').remove()
+                    },
+                    error: function (xhr, status, error) {
+                        alert('Error deleting data')
+                    }
+                });
+            }
+        }
+
+        function printForm(el) {
             const form = $(el).closest('form.inspection-form')
             const id = form.find('#data-id').val()
             window.open('@urlinspectionprint/' + id, '_blank');
@@ -449,13 +468,13 @@
                     let galleryHtml = ''
                     data.inspectionFiles.forEach(i => {
                         galleryHtml += `<input type="hidden" identifier="delete-gallery-${i.id}" name="deletedImageIDs[${i.id}]" value="0">
-                                            <div class="single-image" data-identifier="gallery-${i.id}">
-                                                <img src="/${i.filePath}"">
-                                                <div class="delete-image-btn" onclick="deleteGalleryImage('gallery-${i.id}')">
-                                                    <i class="fa-solid fa-xmark"></i>
+                                                <div class="single-image" data-identifier="gallery-${i.id}">
+                                                    <img src="/${i.filePath}"">
+                                                    <div class="delete-image-btn" onclick="deleteGalleryImage('gallery-${i.id}')">
+                                                        <i class="fa-solid fa-xmark"></i>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                            `
+                                                `
                     })
 
                     //fill image
@@ -511,22 +530,25 @@
             const equipmentId = id
             let isHistory = false
             let name = $(this).attr('attr-name');
+            let tabInspectionId = 0
             if ($(this).attr('attr-inspection-id')) {
                 isHistory = true
                 id = $(this).attr('attr-inspection-id')
-
+                tabInspectionId = id
             } else {
                 name = `New Inspection ${name}`
             }
-            if ($('.tab-pane[equipment-id="' + equipmentId + '"]').length > 0) {
-                alert('This equipment already exist in the tab');
-                return;
+            if (tabInspectionId > 0) {
+                if ($('.tab-pane[tab-inspection-id="' + tabInspectionId + '"]').length > 0) {
+                    alert('This inspection already exist in the tab');
+                    return;
+                }
             }
 
             let tabheadercontainer = $('#inspectiontabheader');
             let tabcontentcontainer = $('#tabcontentcontainer');
             tabheadercontainer.append('<li id="inspectionheader' + ctr + '"><a href="#inspection' + ctr + '" data-bs-toggle="tab" class="nav-link" data-bs-target="#inspection' + ctr + '" type="button" role="tab" tab-num="' + ctr + '">' + name + ' <button type="button" class="btn-close-inspection"><i class="fa-solid fa-xmark"></i></button></a></li>');
-            tabcontentcontainer.append('<div class="tab-pane" equipment-id="' + equipmentId + '" id="inspection' + ctr + '" tab-num="' + ctr + '">' + template_inspection_html + '</div>');
+            tabcontentcontainer.append('<div class="tab-pane" tab-inspection-id="' + tabInspectionId + '" equipment-id="' + equipmentId + '" id="inspection' + ctr + '" tab-num="' + ctr + '">' + template_inspection_html + '</div>');
             let tabcontent = tabcontentcontainer.find('.form-control');
             tabcontent.each(function () {
                 let name = $(this).attr('id') + ctr;
