--- a/Riskvalve/Views/Inspection/PrintInspection.cshtml
+++ b/Riskvalve/Views/Inspection/PrintInspection.cshtml
@@ -80,7 +80,7 @@
                 <td colspan="5">Pneumatic</td>
                 <td colspan="1" class="checkbox">
                     <input type="checkbox" />
-                    ----
+                    
                 </td>
             </tr>
             <tr>
@@ -88,12 +88,12 @@
                 <td colspan="2">@inspection.Asset.BodyMaterial</td>
                 <td colspan="5">Hydraulic</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             <tr>
                 <td colspan="4">Remaining Life</td>
-                <td colspan="2">-------</td>
+                <td colspan="2"></td>
                 <td colspan="5">Manual Override</td>
                 <td colspan="1" class="checkbox">
                     <input type="checkbox" @(inspection.Asset.ManualOverrideID == 1 ? "checked" : "") />
@@ -108,7 +108,7 @@
                 <td colspan="6" class="table-section">Valve Inspection</td>
                 <td colspan="5">Manual valve</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             <!-- Inspection rows -->
@@ -117,7 +117,7 @@
                 <td colspan="2">@inspection.InspectionMethod</td>
                 <td colspan="5">Auto On-Off Valve</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             <tr>
@@ -125,7 +125,7 @@
                 <td colspan="2">@inspection.InspectionEffectiveness</td>
                 <td colspan="5">Control Valve</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             <tr>
@@ -133,7 +133,7 @@
                 <td colspan="2">@inspection.InspectionDescription</td>
                 <td colspan="5">PSV/PRV</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             <tr>
@@ -146,7 +146,7 @@
                 <td colspan="2">@inspection.TestPressureIfAny</td>
                 <td colspan="5">In-service</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             <tr>
@@ -158,13 +158,13 @@
                 </td>
                 <td colspan="5">Waiting For Refurbishment</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             <tr>
                 <td colspan="5">Spare</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" /> 
                 </td>
             </tr>
             <tr>
