--- a/Riskvalve/Views/Shared/_Layout.cshtml
+++ b/Riskvalve/Views/Shared/_Layout.cshtml
@@ -100,8 +100,8 @@
                                     Inspection / Maintenance</a></li>
                             <li><a class="dropdown-item" asp-area="" asp-controller="Tool" asp-action="ImportAssessment">Import
                                     Assessment</a></li>
-                            <li><a class="dropdown-item" asp-area="" asp-controller="Tool" asp-action="ExportAssessment">Export
-                                    Assessment</a></li>
+                            @* <li><a class="dropdown-item" asp-area="" asp-controller="Tool" asp-action="ExportAssessment">Export
+                                    Assessment</a></li> *@
                         </ul>
                     </li>
                 }
