--- a/Riskvalve/Views/AssetRegister/Area.cshtml
+++ b/Riskvalve/Views/AssetRegister/Area.cshtml
@@ -18,15 +18,17 @@
             </div>
             <div class="table-container">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                    <button onclick="editAction.apply(this)" type="button" class="btn btn-primary custom btn-area-action btn-with-icon" attr-mode="create">
+                    <button onclick="editAction.apply(this)" type="button"
+                        class="btn btn-primary custom btn-area-action btn-with-icon" attr-mode="create">
                         <i class="fa-solid fa-plus"></i> Add New
                     </button>
                     <div class="">
                         <div class="input-group input-group-sm input-search">
                             <span class="input-group-text" id="basic-addon1">
-                            <i class="bi bi-search"></i>
+                                <i class="bi bi-search"></i>
                             </span>
-                            <input type="text" class="form-control form-control-sm" placeholder="Search" oninput="dataTableSearch(this.value)">
+                            <input type="text" class="form-control form-control-sm" placeholder="Search"
+                                oninput="dataTableSearch(this.value)">
                         </div>
                     </div>
                 </div>
@@ -54,8 +56,10 @@
                                         <td>@item.CreatedByUser</td>
                                         <td>@item.CreatedAt</td>
                                         <td>
-                                            <button onclick="editAction.apply(this)" class="btn btn-custom-size btn-primary invert btn-with-icon btn-area-action" attr-mode="view"
-                                                attr-itemid="@item.Id"><i class="fa-solid fa-pencil"></i>Edit</button>
+                                            <button onclick="editAction.apply(this)"
+                                                class="btn btn-custom-size btn-primary invert btn-with-icon btn-area-action"
+                                                attr-mode="view" attr-itemid="@item.Id"><i
+                                                    class="fa-solid fa-pencil"></i>Edit</button>
                                         </td>
                                     </tr>
                                 }
@@ -70,7 +74,7 @@
 <div class="modal fade" id="addAreaModal" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form>
+            <form class="asset-form">
                 <input id="field-business-area-mode" type="hidden">
                 <input id="field-business-area-id" name="businessareaid" type="hidden">
                 <div class="modal-header">
@@ -95,7 +99,7 @@
 
 @section Scripts {
     <script>
-        function editAction () {
+        function editAction() {
             $('#field-business-area-name').val('');
             var mode = $(this).attr('attr-mode');
             if (mode == 'create') {
@@ -119,49 +123,69 @@
             }
         }
 
-        $(document).ready(function () {            
+        $(document).ready(function () {
             $('#btn-area-modal-save').click(function () {
-                var mode = $('#field-business-area-mode').val();
-                var name = $('#field-business-area-name').val();
-                if (name == '') {
-                    alert('Business Area Name is required');
-                    return;
-                } else {
-                    if (mode == 'create') {
-                        $.ajax({
-                            url: '@urladdarea',
-                            type: 'POST',
-                            data: { businessArea: name },
-                            success: function (data) {
-                                location.reload();
-                            }
-                        });
-                    } else if (mode == 'update') {
-                        var id = $('#field-business-area-id').val();
-                        $.ajax({
-                            url: '@urlupdatearea',
-                            type: 'POST',
-                            data: { id: id, businessArea: name },
-                            success: function (data) {
-                                location.reload();
-                            }
-                        });
+                if ($('.asset-form').valid()) {
+                    var mode = $('#field-business-area-mode').val();
+                    var name = $('#field-business-area-name').val();
+                    if (name == '') {
+                        alert('Business Area Name is required');
+                        return;
+                    } else {
+                        if (mode == 'create') {
+                            $.ajax({
+                                url: '@urladdarea',
+                                type: 'POST',
+                                data: { businessArea: name },
+                                success: function (data) {
+                                    console.log(data);
+                                    if (data.result == 400) {
+                                        alert(data.message);
+                                    } else {
+                                        location.reload();
+                                    }
+                                }
+                            });
+                        } else if (mode == 'update') {
+                            var id = $('#field-business-area-id').val();
+                            $.ajax({
+                                url: '@urlupdatearea',
+                                type: 'POST',
+                                data: { id: id, businessArea: name },
+                                success: function (data) {
+                                    console.log(data);
+                                    if (data.result == 400) {
+                                        alert(data.message);
+                                    } else {
+                                        location.reload();
+                                    }
+                                }
+                            });
+                        }
                     }
                 }
             });
             $('#btn-area-modal-delete').click(function () {
                 var id = $('#field-business-area-id').val();
-                $.ajax({
-                    url: '@urldeletearea',
-                    type: 'POST',
-                    data: { id: id },
-                    success: function (data) {
-                        location.reload();
-                    }
-                });
+                if (confirm('are you sure you want to delete this data?')) {
+                    $.ajax({
+                        url: '@urldeletearea',
+                        type: 'POST',
+                        data: { id: id },
+                        success: function (data) {
+                            console.log(data);
+                            if (data.result == 400) {
+                                alert(data.message);
+                            } else {
+                                location.reload();
+                            }
+                        }
+                    });
+                }
             });
-
-            initDatatable()
+            initDatatable({
+                ordering: true,
+            })
         });
     </script>
 }
