--- a/Riskvalve/Views/Login/Index.cshtml
+++ b/Riskvalve/Views/Login/Index.cshtml
@@ -21,12 +21,12 @@
                 Valve Integrity Management System</p>
             <p class="text-center">Input your Credential (Email and Password) to enter Web Application</p>
             <form class="login-form">
-                <input id="timezone" type="hidden" name="timezone" required>
+                <input id="timezone" type="hidden" name="timezone">
                 <div class="label">
                     Email
                 </div>
                 <div class="form-group has-feedback">
-                    <input type="text" class="form-control" name="username" autocomplete="off" required autofocus>
+                    <input type="email" class="form-control" name="username" autocomplete="off" required autofocus>
                     <span class="glyphicon glyphicon-user form-control-feedback"></span>
                 </div>
                 <div class="label">
@@ -60,22 +60,24 @@
                 e.preventDefault();
                 var username = $('input[name="username"]').val();
                 var password = $('input[name="password"]').val();
-                $.ajax({
-                    url: '@urllogin',
-                    type: 'POST',
-                    data: {
-                        username: username,
-                        password: password
-                    },
-                    success: function (data) {
-                        if (data == true) {
-                            var path = "@baseurl" + '/Home/Index';
-                            location.href = path;
-                        } else {
-                            alert('Invalid username or password');
+                if($('.login-form').valid()) {
+                    $.ajax({
+                        url: '@urllogin',
+                        type: 'POST',
+                        data: {
+                            username: username,
+                            password: password
+                        },
+                        success: function (data) {
+                            if (data == true) {
+                                var path = "@baseurl" + '/Home/Index';
+                                location.href = path;
+                            } else {
+                                alert('Invalid email or password');
+                            }
                         }
-                    }
-                });
+                    });
+                }
             });
         });
     </script>
