--- a/Riskvalve/Views/Maintenance/PrintMaintenance.cshtml
+++ b/Riskvalve/Views/Maintenance/PrintMaintenance.cshtml
@@ -13,7 +13,7 @@
         <table class="maintenance-print" id="maintenance-print-table">
             <tr>
                 <td colspan="10" class="heading" style="width: 100%; background-color: #1f487c !important;">Valve
-                    Inspection</td>
+                    Maintenance</td>
                 <td colspan="2" rowspan="4" class="no-padding text-center">
                     <img class="logo" src="~/lib/images/logo-square.jpg">
                 </td>
@@ -80,7 +80,7 @@
                 <td colspan="5">Pneumatic</td>
                 <td colspan="1" class="checkbox">
                     <input type="checkbox" />
-                    ----
+                    
                 </td>
             </tr>
             <tr>
@@ -88,12 +88,12 @@
                 <td colspan="2">@maintenance.Asset.BodyMaterial</td>
                 <td colspan="5">Hydraulic</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" />
                 </td>
             </tr>
             <tr>
                 <td colspan="4">Remaining Life</td>
-                <td colspan="2">-------</td>
+                <td colspan="2"></td>
                 <td colspan="5">Manual Override</td>
                 <td colspan="1" class="checkbox">
                     <input type="checkbox" @(maintenance.Asset.ManualOverrideID == 1 ? "checked" : "") />
@@ -105,10 +105,10 @@
                 <td colspan="6" class="table-section sub-section">Usage Type</td>
             </tr>
             <tr>
-                <td colspan="6" class="table-section">Valve Inspection</td>
+                <td colspan="6" class="table-section">Valve Maintenance</td>
                 <td colspan="5">Manual valve</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" />
                 </td>
             </tr>
             <!-- Inspection rows -->
@@ -117,7 +117,7 @@
                 <td colspan="2">@maintenance.IsValveRepaired</td>
                 <td colspan="5">Auto On-Off Valve</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" />
                 </td>
             </tr>
             <tr>
@@ -125,7 +125,7 @@
                 <td colspan="2">@maintenance.MaintenanceDescription</td>
                 <td colspan="5">Control Valve</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" />
                 </td>
             </tr>
             <tr>
@@ -133,7 +133,7 @@
                 <td colspan="2">@maintenance.MaintenanceDescription</td>
                 <td colspan="5">PSV/PRV</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" />
                 </td>
             </tr>
             <tr>
@@ -148,19 +148,19 @@
             <tr>
                 <td colspan="5">In-service</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" />
                 </td>
             </tr>
             <tr>
                 <td colspan="5">Waiting For Refurbishment</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" />
                 </td>
             </tr>
             <tr>
                 <td colspan="5">Spare</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> ---
+                    <input type="checkbox" />
                 </td>
             </tr>
         </table>
