--- a/Riskvalve/Views/User/Index.cshtml
+++ b/Riskvalve/Views/User/Index.cshtml
@@ -17,8 +17,8 @@
             </div>
             <div class="table-container">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                    <button onclick="editAction.apply(this)" type="button" class="btn btn-primary custom btn-user-action btn-with-icon"
-                        attr-mode="create">
+                    <button onclick="editAction.apply(this)" type="button"
+                        class="btn btn-primary custom btn-user-action btn-with-icon" attr-mode="create">
                         <i class="fa-solid fa-plus"></i> Add New
                     </button>
                     <div class="">
@@ -35,7 +35,7 @@
                     <thead>
                         <tr>
                             <th>No</th>
-                            <th>Username</th>
+                            <th>Email</th>
                             <th>Role Name</th>
                             <th>Admin</th>
                             <th>Engineer</th>
@@ -74,7 +74,8 @@
                                             }
                                         </td>
                                         <td>
-                                            <button onclick="editAction.apply(this)" class="btn btn-custom-size btn-primary invert btn-with-icon btn-user-action"
+                                            <button onclick="editAction.apply(this)"
+                                                class="btn btn-custom-size btn-primary invert btn-with-icon btn-user-action"
                                                 attr-mode="view" attr-itemid="@user.Id"><i
                                                     class="fa-solid fa-pencil"></i>Edit</button>
                                         </td>
@@ -91,7 +92,7 @@
 <div class="modal fade" id="addUserModal" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form>
+            <form class="user-form">
                 <input id="field-user-mode" type="hidden">
                 <input id="field-user-id" name="userid" type="hidden">
                 <div class="modal-header">
@@ -99,8 +100,9 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label for="field-username">Username</label>
-                        <input id="field-username" name="username" class="form-control" placeholder="Username" required>
+                        <label for="field-username">Email</label>
+                        <input id="field-username" type="email" name="username" class="form-control" placeholder="Email"
+                            required>
                     </div>
                     <div class="form-group">
                         <label for="field-password">Password</label>
@@ -137,7 +139,7 @@
 
 @section Scripts {
     <script>
-        function editAction () {
+        function editAction() {
             $('#field-user-id').val('');
             $('#field-username').val('');
             $('#field-password').val('');
@@ -183,53 +185,59 @@
                 }
             });
             $('#btn-user-modal-save').click(function () {
-                var mode = $('#field-user-mode').val();
-                var id = $('#field-user-id').val();
-                var username = $('#field-username').val();
-                var password = $('#field-password').val();
-                var role = $('#field-role').val();
-                var isAdmin = $('#field-isadmin').prop('checked');
-                var isEngineer = $('#field-isengineer').prop('checked');
-                var isViewer = $('#field-isviewer').prop('checked');
-                if (mode == 'create') {
-                    $.ajax({
-                        url: '@urladduser',
-                        type: 'POST',
-                        data: { username: username, password: password, role: role, isAdmin: isAdmin, isEngineer: isEngineer, isViewer: isViewer },
-                        success: function (data) {
-                            if (data) {
-                                location.reload();
-                            } else {
-                                alert('Username already exists');
+                if ($('.user-form').valid()) {
+                    var mode = $('#field-user-mode').val();
+                    var id = $('#field-user-id').val();
+                    var username = $('#field-username').val();
+                    var password = $('#field-password').val();
+                    var role = $('#field-role').val();
+                    var isAdmin = $('#field-isadmin').prop('checked');
+                    var isEngineer = $('#field-isengineer').prop('checked');
+                    var isViewer = $('#field-isviewer').prop('checked');
+                    if (mode == 'create') {
+                        $.ajax({
+                            url: '@urladduser',
+                            type: 'POST',
+                            data: { username: username, password: password, role: role, isAdmin: isAdmin, isEngineer: isEngineer, isViewer: isViewer },
+                            success: function (data) {
+                                if (data) {
+                                    location.reload();
+                                } else {
+                                    alert('Username already exists');
+                                }
                             }
-                        }
-                    });
-                } else if (mode == 'update') {
+                        });
+                    } else if (mode == 'update') {
+                        $.ajax({
+                            url: '@urlupdateuser',
+                            type: 'POST',
+                            data: { id: id, username: username, password: password, role: role, isAdmin: isAdmin, isEngineer: isEngineer, isViewer: isViewer },
+                            success: function (data) {
+                                location.reload();
+                            }
+                        });
+                    }
+                }
+            });
+            $('#btn-user-modal-delete').click(function () {
+                if (confirm('Are you sure you want to delete this user?')) {
+                    var id = $('#field-user-id').val();
                     $.ajax({
-                        url: '@urlupdateuser',
+                        url: '@urldeleteuser',
                         type: 'POST',
-                        data: { id: id, username: username, password: password, role: role, isAdmin: isAdmin, isEngineer: isEngineer, isViewer: isViewer },
+                        data: { id: id },
                         success: function (data) {
                             location.reload();
                         }
                     });
                 }
             });
-            $('#btn-user-modal-delete').click(function () {
-                var id = $('#field-user-id').val();
-                $.ajax({
-                    url: '@urldeleteuser',
-                    type: 'POST',
-                    data: { id: id },
-                    success: function (data) {
-                        location.reload();
-                    }
-                });
-            });
             $('#btn-user-modal-cancel').click(function () {
                 $('#addUserModal').modal('hide');
             });
-            initDatatable();
+            initDatatable({
+                ordering: true,
+            })
         })
     </script>
 }
